# egydead-cli

./: index.js  package-lock.json  package.json  pyproject.toml  setup.py  skills-lock.json
egydead/: cli.py  history.py  resolve.py  search.py  test.py  title.py  translate.py
egydead/tui/: __init__.py  app.py
lib/: app.js  history.js  interactive.js  resolve.js  search.js  test.js  title.js  translate.js
lib/views/: content-view.js  episode-list-view.js  history-view.js  results-view.js  search-view.js
