[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "egydead-cli"
version = "1.0.0"
description = "CLI tool to search and extract direct download URLs from EgyDead"
requires-python = ">=3.8"

[project.scripts]
egydead = "egydead.cli:main"
